# VisualAlbumSorter

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
Formula/: vasort.rb
config/: config_template.json
docs/: ARCHITECTURE.md  QUICK_START.md  TESTING.md  TROUBLESHOOTING.md
scripts/: diagnose_lm_studio.py  manage_providers.py  smoke_vasort.sh  test_batch_images.py  test_classification.py  test_heic_fix.py  verify_integrity.py
tests/: TEST_COVERAGE_REVIEW.md  conftest.py
tests/fixtures/images/: README.md  create_placeholders.py  create_placeholders.sh
tests/integration/: test_album_management.py  test_api_resilience.py  test_cli_end_to_end.py  test_config_and_permissions.py  test_core_classification.py  test_state_persistence.py
tests/performance/: test_enhanced_processor_performance.py
tests/planning/: IMPLEMENTATION_ROADMAP.md  QA_ANALYSIS_REPORT.md  TEST_CASES.yaml
tests/unit/: __init__.py  test_classifier.py  test_config.py  test_diagnostics.py  test_provider_factory.py  test_providers.py
visualalbumsorter/: __init__.py  cli.py
visualalbumsorter/core/: __init__.py  classifier.py  config.py  export_utils.py  photo_processor.py  photo_processor_enhanced.py
visualalbumsorter/providers/: __init__.py  base.py  lm_studio.py  mlx_vlm.py  ollama.py
visualalbumsorter/utils/: __init__.py  cli.py  diagnostics.py  provider_factory.py
